You can run the program from the main directory now.

Debug better organized. Added kill switch, simplifed sliders.
Agent will randomly move a joint at random per chosen interval

Implemented changes from debug branch into main branch

Added failure condition

Added Random Movement for multiple joints with params:
Joint, Dist, Force

Added stats for debugging, and summary line graph with respect to distance

Added Time limit support easily